# ray-tracing-practice

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  config.txt  create_test_config.py  main.cpp  run.sh  test_config.txt
cpu/: main.cpp
cpu/include/: diffuse_light.hpp  hittable_list.hpp  hittable_object.hpp  interval.hpp  lambertian.hpp  material.hpp  metal.hpp  sphere.hpp  vec3.hpp
cpu/src/: camera.cpp
cpu/src/HittableObjects/: hittable_list.cpp  sphere.cpp
cpu/src/Materials/: dielectric.cpp  metal.cpp
gpu/: main.cu
gpu/include/: aabb.cuh  camera.cuh  hittable_object.cuh  interval.cuh  material.cuh  materials.cuh  octaeder.cuh  plane.cuh  random_utils.cuh  ray.cuh  scene.cuh  sphere.cuh  vec3.cuh
gpu/src/: bvh.cu  camera.cu
gpu/src/HittableObjects/: plane.cu
include/: aabb.h  aabb.hpp  bvh.h  bvh.hpp  bvh_builder.h  camera.cuh  camera.hpp  color.hpp  constants.hpp  dielectric.hpp  different.hpp  hittable_list.hpp  hittable_object.hpp  interval.h  interval.hpp  lambertian.hpp  material.hpp  materials.h  metal.hpp  plane.h  plane.hpp  random_utils.h  ray.h  ray.hpp  scene.h  scene_params.h  sphere.h  sphere.hpp  stb_image_write.h  vec3.h  vec3.hpp
src/: camera.cpp  camera.cu  interval.cpp  main.cu  ray.cpp  vec3.cpp
src/Camera/: camera.cpp
src/HittableObjects/: bvh.cpp  hittable_list.cpp  hittable_object.cpp  plane.cpp  sphere.cpp
src/Materials/: lambertian.cpp
src/Vector/: vec3.cpp
src/common/: aabb.h  interval.h  scene_params.h  vec3.h
src/gpu/: CMakeLists.txt
src/gpu/include/: bvh.cuh  bvh_builder.cuh  camera.cuh  hittable_object.cuh  materials.cuh  plane.cuh  random_utils.cuh  scene.cuh  sphere.cuh
src/gpu/src/: camera.cu
